# GeoModel

FullSimLight/: CMakeLists.txt
FullSimLight/Plugins/: CMakeLists.txt
FullSimLight/Plugins/GPUPlugins/: CMakeLists.txt  README.md  celer-testem3.fsl.json  testem3.gdml
FullSimLight/Plugins/GPUPlugins/ATLEMEC/: README.md
FullSimLight/Plugins/GPUPlugins/ATLTileCalTB/: ATLTileCalTBSDPlugin.cc  ATLTileCalTBUserActionPlugin.cc  CMakeLists.txt  README.md  celer-atltilecaltb.fsl.json
FullSimLight/Plugins/GPUPlugins/ATLTileCalTB/ATLTileCalTB/: ATLTileCalTBActInitialization.cc  ATLTileCalTBDetConstruction.cc  ATLTileCalTBPrimaryGenAction.cc  Celeritas.cc
FullSimLight/Plugins/GPUPlugins/MinCeleritas/: CMakeLists.txt  README.md  UserActionPlugin.cc  celer-emec.fsl.json  celer-testem3.fsl.json
FullSimLight/Plugins/GPUPlugins/MinCeleritas/MinCeleritas/: Celeritas.cc  EventAction.hh  MinCelPrimaryGenAction.cc  MinCelPrimaryGenAction.hh  RunAction.hh  TrackingAction.hh
FullSimLight/Plugins/GPUPlugins/src/: CelerEventAction.hh  CelerRunAction.hh  CelerTrackingAction.hh  CelerUserActionPlugin.cc  Celeritas.cc  README.md
